@@ -1,3 +1,9 @@
+2009-03-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Made LaTeX errors pop up in a scrollable dialog.
+
+	* Fixed a display bug leading to superfluous brackets for e.g. "cos(a+b)".
+
 2009-03-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Fixed handling of brackets in @expand_powers.
